@@ -30,6 +30,8 @@ PostInstallScripts=./xorg_fix_proprietary.py
 # this supported blacklisting certain versions to ensure we do not upgrade
 # to a known broken version. python2.6 was broken during intrepid->jaunty
 BadVersions=python2.6_2.6.1-1ubuntu8,python-central_0.6.11ubuntu5
+# ubiquity slideshow
+#SlideshowUrl=http://people.canonical.com/~mvo/tmp/slides/
 
 [KernelRemoval]
 Version=2.6.31
