@@ -16,7 +16,7 @@
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
-          <object class="GtkVBox" id="vbox1">
+          <object class="GtkVBox" id="vbox_main">
             <property name="visible">True</property>
             <property name="border_width">6</property>
             <property name="orientation">vertical</property>
