@@ -3,6 +3,11 @@ update-manager (1:0.131.3) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - add missing check for ubuntu-security when testing for
       mirrors (thanks to Stuart Langridge)
+  * DistUpgrade/DistUpgrade.cfg:
+    - add example SlideshowUrl
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeView.py,
+    DistUpgrade/DistUpgradeViewGtk.py:
+    - add slideshow support based on webkit
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Dec 2009 12:47:55 +0100
 
